// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`realizando pruebas en el componente <GifExpertApp /> Muestra de manwera corrrecta el componente <GifExpertApp   1`] = `
<Fragment>
  <div
    className="wrapper-main"
  >
    <h2
      className="Title"
    >
      **GifExpertApp**
    </h2>
    <AddCategorias
      setCategorias={[Function]}
    />
    <hr
      className="Linea"
    />
    <ol />
    <footer
      className="footer"
    >
      Aplicación creada por: Benítez Medina Uriel
    </footer>
  </div>
</Fragment>
`;

exports[`realizando pruebas en el componente <GifExpertApp /> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <div
    className="wrapper-main"
  >
    <h2
      className="Title"
    >
      **GifExpertApp**
    </h2>
    <AddCategorias
      setCategorias={[Function]}
    />
    <hr
      className="Linea"
    />
    <ol>
      <GifGrid
        categoria="Goku"
        key="Goku"
      />
      <GifGrid
        categoria="Pokemon"
        key="Pokemon"
      />
    </ol>
    <footer
      className="footer"
    >
      Aplicación creada por: Benítez Medina Uriel
    </footer>
  </div>
</Fragment>
`;
